# linux-map

./: README.md  StaticFirst.sln
FirstLibrary/: AppLibrary.h  CMakeCache.txt  CMakeLists.txt  Design.h  DesignRecordManager.cpp  DesignRecordManager.h  DrawData.cpp  DrawData.h  FirstLibrary.vcxproj  FirstLibrary.vcxproj.filters  Makefile  MapDataManager.cpp  MapDataManager.h  MapDataRecord.cpp  MapDataRecord.h  MapDesignRecordManager.h  MapDrawEngine.cpp  MapDrawEngine.h  MyType.h  Rect.cpp  Rect.h  cmake_install.cmake  iCoord.cpp  iCoord.h  libMake  myHeader.h  mySource.cpp  tmp_brush.h  tmp_font.h  tmp_graphics.h  tmp_image.h  tmp_pen.h  try.cpp  type.h
FirstLibrary/Output/: Lv1_info.cdf  Lv1_info.ddf
FirstLibrary/Output/Lv1/0_0/: ABH000.rec  AFA001.rec  LAN010.rec  LAP030.rec  LBH140.rec  LGB055.rec  PGB005.rec  SUAS.BAK  SUAS.rec
FirstLibrary/include/: brush.h  font.h  geminitgngdi.h  graphics.h  image.h  image.h.orif  pen.h  type.h
FirstLibrary/include/gx/: gx.h
Header/: AppLibrary.h  Design.h  DesignRecordManager.h  DrawData.h  MapDataManager.h  MapDataRecord.h  MapDrawEngine.h  MyType.h  iCoord.h
geminit_gn_gdi_examples-master/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
geminit_gn_gdi_examples-master/Header/: Design.h  DrawData.h  MapDataManager.h  MapDataRecord.h  MapDrawEngine.h  MyType.h  iCoord.h
geminit_gn_gdi_examples-master/fonts/: Sans-Regular_10.bdf
geminit_gn_gdi_examples-master/geminit_gn_gdi_examples-master/: CMakeLists.txt  README.md  clean-all.cmake
geminit_gn_gdi_examples-master/geminit_gn_gdi_examples-master/include/: brush.h  font.h  graphics.h  pen.h
geminit_gn_gdi_examples-master/geminit_gn_gdi_examples-master/script/: install.sh
geminit_gn_gdi_examples-master/geminit_gn_gdi_examples-master/src/: example_ellipse.cpp  example_image.cpp  example_line.cpp  example_polygon.cpp  example_rectangle.cpp  example_setpixel.cpp  example_string.cpp  example_triangle.cpp
geminit_gn_gdi_examples-master/include/: .image.h.swp  image.h  pen.h  type.h
geminit_gn_gdi_examples-master/src/: .example_image.cpp.swp  example_ellipse.cpp  example_image.cpp  example_line.cpp  example_polygon.cpp  example_rectangle.cpp  example_setpixel.cpp  example_string.cpp  example_triangle.cpp  kundoo.cpp  main.cpp
geminit_gn_gdi_examples-master/src/Output/: Lv1_info.cdf
geminit_gn_gdi_examples-master/src/Output/Lv1/0_0/: PGB005.rec
gogo/: AppLib.cpp  AppLib.h  AppType.h  CMakeLists.txt  DataComm.cpp  DataComm.h  Design.h  DesignRecordManager.cpp  DesignRecordManager.h  DrawData.cpp  DrawData.h  Global.cpp  Global.h  MapDataManager.cpp  MapDataManager.h  MapDataRecord.cpp  MapDataRecord.h  MapDrawEngine.cpp  MapDrawEngine.h  MapType.h  MyType.h  iCoord.cpp  iCoord.h  libMake  try.cpp
gogo/fonts/: Sans_Regular_10.bdf
gogo/include/: brush.h  graphics.h
trytry/: trytry.cpp  trytry.vcxproj  trytry.vcxproj.filters
