cmake_minimum_required(VERSION 3.2)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

PROJECT(try)

INCLUDE_DIRECTORIES(include/gx/)

FILE(MAKE_DIRECTORY out)
FILE(MAKE_DIRECTORY out/fonts)
FILE(COPY fonts/ DESTINATION out/fonts/ )

ADD_EXECUTABLE(try try.cpp)

TARGET_LINK_LIBRARIES(try -Llib LinuxMap geminit-gn-gdi png16 jpeg)

SET_TARGET_PROPERTIES(try PROPERTIES RUNTIME_OUTPUT_DIRECTORY out)
